
1.2b2
- Fixed issues with track reordering
- Improved score printing (nicer-looking, both F and G clefs supported, adaptable height, notes above or below score, fixed crashes...)
- Fixed bug in score printing where the first page would be a bunch filled with garbage
- G or F clef view preference saved
- Improved display and printing of ties on chords
- Code cleanup

1.2b1
- Added ability to print more than one track at once
- Allowed showing only G or F clef
- Support for moving score one octave up or down
- Initial support for score printing
- Fixed improper handling of accidentals
- Fixed default suggested name when exporting to PDF on mac OS X
- Fixed odd-numbered time signatures like 9/8
- Reworked beaming code, resulting in nicer beams in some cases
- Added DropD-bass tuning preset, cleaned up code
- Improved printing output by putting a bigger centered title on first page.
- Fixed glitches in score editor settings
- Fixed wrong rythm on playback caused by improper ordering of note off events
- Nicer-looking ties in score editor
- New toolbar layout
- Major code cleanup in measure handling code
- Major code cleanup in track widgets
- More automatic memory management, improved leak checks
- Fixed memory leaks

1.1.3
- improved vector implementation, fixing possible problems on 64-bits machines
- improved 'follow playback'
- added warning message when adding too many tracks
- always play note on click
- fixed file name being used over song name when printing tablature
- removed harmless warning on the terminal when loading a midi file saved by aria
- fixed undoing vertical moves in guitar editor
- fixed undoing vertical moves in drum editor
- fixed 'follow playback' menu item not properly checked/unchecked when switching between songs
- improvement 'settings' menu layout
- improved scons towards a real install target
- moved docs inside resources so they're always available
- fixed adding new tracks in manual channel management mode